--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					
 				</nav>
 				<div class="navigation-toggle" data-tools="navigation-toggle" data-target="#navbar-1">
-				    <span class="logo"href="https://cheapandbesthosting.com/cheapest-vps/">Reveiwsofhosting</span>
+				    <span class="logo"href="https://cheapandbesthosting.com/cheapest-vps/"/>Reveiwsofhosting</span>
 				</div>
 			    <nav id="navbar-1" class="navbar item-nav navbar-right">
 				    <ul>
